--- a/src/Packagist/WebBundle/Resources/views/Web/explore.html.twig
+++ b/src/Packagist/WebBundle/Resources/views/Web/explore.html.twig
@@ -6,6 +6,17 @@
     <div class="box clearfix">
         {% block content_title %}<h1>Packages</h1>{% endblock %}
         {% block lists %}
+            {% if all %}
+            <div class="packages-short">
+                <h2>All Packages</h2>
+                <ul>
+                    {% for pkg in all %}
+                        <li><a href="{{ path('view_package', {name: pkg.name}) }}">{{ pkg.name }}</a> {{ pkg.description|truncate(40) }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+            {% if newlyReleased %}
             <div class="packages-short">
                 <h2>New Releases <a href="{{ url('feed_releases', {_format: 'rss'}) }}">RSS</a></h2>
                 <ul>
@@ -14,6 +25,8 @@
                     {% endfor %}
                 </ul>
             </div>
+            {% endif %}
+            {% if newlySubmitted %}
             <div class="packages-short">
                 <h2>New Packages <a href="{{ url('feed_packages', {_format: 'rss'}) }}">RSS</a></h2>
                 <ul>
@@ -22,6 +35,8 @@
                     {% endfor %}
                 </ul>
             </div>
+            {% endif %}
+            {% if popular %}
             <div class="packages-short">
                 <h2>Popular Packages</h2>
                 <ul>
@@ -31,6 +46,8 @@
                     <li><a href="{{ path('browse_popular') }}">See more...</a></li>
                 </ul>
             </div>
+            {% endif %}
+            {% if random %}
             <div class="packages-short">
                 <h2>Random Packages</h2>
                 <ul>
@@ -39,6 +56,7 @@
                     {% endfor %}
                 </ul>
             </div>
+            {% endif %}
         {% endblock %}
     </div>
 {% endblock %}
